--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --mode=development",
     "compile": "webpack --mode=production",
-    "installAndCompile": "npm install && npm run compile"
+    "installAndCompile": "npm install && npm run compile",
+    "compileStatic": "webpack --mode=development"
   },
   "author": "",
   "license": "ISC",
