--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,12 @@
     "@material-ui/icons": "^3.0.2",
     "@material-ui/styles": "^3.0.0-alpha.10",
     "connected-react-router": "^4.5.0",
+    "google-maps-react": "^2.0.2",
     "history": "^4.7.2",
     "jwt-decode": "^2.2.0",
+    "pigeon-maps": "^0.12.1",
+    "pigeon-marker": "^0.3.4",
+    "pigeon-overlay": "^0.2.3",
     "react": "^16.8.3",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.8.3",
