--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-redux": "^5.1.1",
     "react-responsive": "^6.1.1",
     "react-router-dom": "^4.3.1",
+    "react-sidebar": "^3.0.2",
     "react-spinners": "^0.4.8",
     "redux": "^3.7.2",
     "redux-form": "^7.4.2",
